syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "StiktifyShopBackend.Order";

service OrderGrpc{
	rpc GetAll(Empty) returns (Orders);
	rpc GetAllOfShop(Id) returns (Orders);
	rpc GetAllOfUser(Id) returns (Orders);
	rpc GetAllOfProduct(Id) returns (Orders);
	rpc GetOne(Id) returns (Order);
	rpc Create(CreateOrder) returns (Response);
	rpc Update(Order) returns (Response);
}

message Empty{}

message Id {
	string SearchId = 1;
}

message CreateOrder{
	string UserId = 1;
	string AddressId = 2;
	string ProductId = 3;
	string ProductItemId = 4;
	int32 Quantity = 5;
	double Price = 6;
	double ShippingFee = 8;
	string Status = 9;
}

message Order{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue UserId = 2;
	google.protobuf.StringValue AddressId = 3;
	google.protobuf.StringValue ProductId = 4;
	google.protobuf.StringValue ProductItemId = 5;
	int32 Quantity = 6;
	double Price = 7;
	double ShippingFee = 8;
	google.protobuf.StringValue Status = 9;
	google.protobuf.Timestamp CreateAt = 10;
	google.protobuf.Timestamp UpdateAt = 11;
}

message Orders{
	repeated Order Item = 1;
}

message Response {
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}